<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/courier_service"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_shopping_cart_black_24dp"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_back"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_email"
                        android:tint="@color/colorAccent"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:hint="@string/you_email_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutEmail"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/background_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_lock"
                        android:tint="@color/colorAccent"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@null"
                        android:hint="@string/stars"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41dp"
                    android:background="@color/colorWhite"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextSecondary"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutPassword"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_button"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_account"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/textCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/create_a_new_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>